crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__memory_list__plain.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
550e8400-e29b Decision Test index entry
018f2a1b-3c4d Hazard [observation] [invalidated 2020-06-15] Blocking calls deadlock the daemon
--- stderr ---
