crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__memory_list__pretty_color.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
<cyan>550e8400-e29b</cyan> <yellow>Decision</yellow> Test index entry
<cyan>018f2a1b-3c4d</cyan> <yellow>Hazard</yellow> [observation] [invalidated 2020-06-15] Blocking calls deadlock the daemon
--- stderr ---
